# exptoolkit

./: .gitignore  README.md  pyproject.toml
examples/: directory_scanner.py  example_batanalysis.ipynb  example_datamodel.ipynb
src/batanalysis/: __init__.py  _savgol.py  data.py  plotting.py  processing.py
src/batanalysis/plotting/: __init__.py  _plotting.py
src/exptoolkit/: __init__.py
src/exptoolkit/data/: __init__.py  _datamodel.py
src/exptoolkit/filerepository/: __init__.py  _datarepo.py
src/exptoolkit/plotter/: __init__.py  colors.py  plotter.py
src/exptoolkit/plotter/backends/: __init__.py  _base.py  _matplotlib.py  _misc.py  _openpyxl.py  _plotly.py  _pyqtgraph.py
src/exptoolkit/processing/: __init__.py  _core.py
src/exptoolkit/repository/: __init__.py  _repo.py  _scanner.py
tests/: conftest.py  test_column.py  test_directory_scanner.py  test_edge_cases.py  test_get_target.py  test_normalize.py  test_ops.py  test_repository.py  test_resource_scanner.py  test_schema.py  test_units.py
