[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exptoolkit"
version = "0.1.0"
description = "Data management toolkit for battery and experimental data processing and visualization."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "t-onoz" }
]
keywords = ["data", "processing", "visualization", "toolkit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries"
]

dependencies = [
  "numpy",
  "polars",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["exptoolkit*"]
