[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exptoolkit"
version = "0.1.0"
description = "Data management toolkit for battery and experimental data processing and visualization."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "t-onoz" }
]
keywords = ["data", "processing", "visualization", "toolkit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries"
]

dependencies = [
  "numpy",
  "polars",
  "pydantic",
  "webcolors",
  "pint",
  "eval-type-backport ; python_version < \"3.9\""
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["exptoolkit*", "batanalysis*"]

[tool.tox]
env_list = ["py38", "py39", "py310", "py311", "py312"]

[tool.tox.env_run_base]
description = "Run tests with pytest"
deps = [
    "pytest"
]
commands = [
    ["python", "-m", "pip", "install", "--upgrade", "pip"],
    ["python", "-m", "pip", "install", "."],
    ["pytest", "tests"]
]
